@@ -657,7 +657,7 @@
 		<Product type="0101" id="8377" name="ZXT-120" config="remotec/zxt-120.xml"/>
 		<Product type="8201" id="8120" name="ZFM-X10EU Dual Mode Insert Module "/>
 		<Product type="8000" id="0002" name="ZFM-80" config="remotec/zfm-80.xml" />
-		<Product type="0200" id="8031" name="ZTS-110" config="remotec/zts-100.xml" />
+		<Product type="0200" id="8031" name="ZTS-110" config="remotec/zts-110.xml" />
 	</Manufacturer>
 	<Manufacturer id="0010" name="RCS">
 	  <Product type="0001" id="0002" name="TZ43 Thermostat" />
